compiler/weave_syntax/tests/data/Strings.error
error: empty character literal
        --> <source>:7:1
         |
       7 | ''
         | ^^
error: character literal may only contain one codepoint
        --> <source>:9:1
         |
       9 | '    '
         | ^^^^^^
error: character literal may only contain one codepoint
        --> <source>:10:1
         |
      10 | '          '
         | ^^^^^^^^^^^^
error: character literal may only contain one codepoint
        --> <source>:12:1
         |
      12 | 'â¤ï¸'
         | ^^^^^^^^
error: invalid unicode character escape sequence
        --> <source>:19:3
         |
      19 | '\u{123456}'
         |   ^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:20:11
         |
      20 | '\u{1234567}'
         |           ^
error: invalid character escape sequence
        --> <source>:20:3
         |
      20 | '\u{1234567}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:20:1
         |
      20 | '\u{1234567}'
         | ^^^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:21:11
         |
      21 | '\u{12345678}'
         |           ^
error: invalid character escape sequence
        --> <source>:21:3
         |
      21 | '\u{12345678}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:21:1
         |
      21 | '\u{12345678}'
         | ^^^^^^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:22:3
         |
      22 | '\u1}'
         |   ^
error: invalid character escape sequence
        --> <source>:22:3
         |
      22 | '\u1}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:22:1
         |
      22 | '\u1}'
         | ^^^^^^
error: expected '{' after '\\u'
        --> <source>:23:3
         |
      23 | '\u12}'
         |   ^
error: invalid character escape sequence
        --> <source>:23:3
         |
      23 | '\u12}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:23:1
         |
      23 | '\u12}'
         | ^^^^^^^
error: expected '{' after '\\u'
        --> <source>:24:3
         |
      24 | '\u123}'
         |   ^
error: invalid character escape sequence
        --> <source>:24:3
         |
      24 | '\u123}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:24:1
         |
      24 | '\u123}'
         | ^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:25:3
         |
      25 | '\u1234}'
         |   ^
error: invalid character escape sequence
        --> <source>:25:3
         |
      25 | '\u1234}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:25:1
         |
      25 | '\u1234}'
         | ^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:26:3
         |
      26 | '\u12345}'
         |   ^
error: invalid character escape sequence
        --> <source>:26:3
         |
      26 | '\u12345}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:26:1
         |
      26 | '\u12345}'
         | ^^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:27:3
         |
      27 | '\u123456}'
         |   ^
error: invalid character escape sequence
        --> <source>:27:3
         |
      27 | '\u123456}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:27:1
         |
      27 | '\u123456}'
         | ^^^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:28:3
         |
      28 | '\u1234567}'
         |   ^
error: invalid character escape sequence
        --> <source>:28:3
         |
      28 | '\u1234567}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:28:1
         |
      28 | '\u1234567}'
         | ^^^^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:29:3
         |
      29 | '\u12345678}'
         |   ^
error: invalid character escape sequence
        --> <source>:29:3
         |
      29 | '\u12345678}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:29:1
         |
      29 | '\u12345678}'
         | ^^^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:30:6
         |
      30 | '\u{1'
         |      ^
error: invalid character escape sequence
        --> <source>:30:3
         |
      30 | '\u{1'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:30:1
         |
      30 | '\u{1'
         | ^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:31:7
         |
      31 | '\u{12'
         |       ^
error: invalid character escape sequence
        --> <source>:31:3
         |
      31 | '\u{12'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:31:1
         |
      31 | '\u{12'
         | ^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:32:8
         |
      32 | '\u{123'
         |        ^
error: invalid character escape sequence
        --> <source>:32:3
         |
      32 | '\u{123'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:32:1
         |
      32 | '\u{123'
         | ^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:33:9
         |
      33 | '\u{1234'
         |         ^
error: invalid character escape sequence
        --> <source>:33:3
         |
      33 | '\u{1234'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:33:1
         |
      33 | '\u{1234'
         | ^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:34:10
         |
      34 | '\u{12345'
         |          ^
error: invalid character escape sequence
        --> <source>:34:3
         |
      34 | '\u{12345'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:34:1
         |
      34 | '\u{12345'
         | ^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:35:11
         |
      35 | '\u{123456'
         |           ^
error: invalid character escape sequence
        --> <source>:35:3
         |
      35 | '\u{123456'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:35:1
         |
      35 | '\u{123456'
         | ^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:36:11
         |
      36 | '\u{1234567'
         |           ^
error: invalid character escape sequence
        --> <source>:36:3
         |
      36 | '\u{1234567'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:36:1
         |
      36 | '\u{1234567'
         | ^^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:37:11
         |
      37 | '\u{12345678'
         |           ^
error: invalid character escape sequence
        --> <source>:37:3
         |
      37 | '\u{12345678'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:37:1
         |
      37 | '\u{12345678'
         | ^^^^^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:38:3
         |
      38 | '\u1'
         |   ^
error: invalid character escape sequence
        --> <source>:38:3
         |
      38 | '\u1'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:38:1
         |
      38 | '\u1'
         | ^^^^^
error: expected '{' after '\\u'
        --> <source>:39:3
         |
      39 | '\u12'
         |   ^
error: invalid character escape sequence
        --> <source>:39:3
         |
      39 | '\u12'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:39:1
         |
      39 | '\u12'
         | ^^^^^^
error: expected '{' after '\\u'
        --> <source>:40:3
         |
      40 | '\u123'
         |   ^
error: invalid character escape sequence
        --> <source>:40:3
         |
      40 | '\u123'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:40:1
         |
      40 | '\u123'
         | ^^^^^^^
error: expected '{' after '\\u'
        --> <source>:41:3
         |
      41 | '\u1234'
         |   ^
error: invalid character escape sequence
        --> <source>:41:3
         |
      41 | '\u1234'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:41:1
         |
      41 | '\u1234'
         | ^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:42:3
         |
      42 | '\u12345'
         |   ^
error: invalid character escape sequence
        --> <source>:42:3
         |
      42 | '\u12345'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:42:1
         |
      42 | '\u12345'
         | ^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:43:3
         |
      43 | '\u123456'
         |   ^
error: invalid character escape sequence
        --> <source>:43:3
         |
      43 | '\u123456'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:43:1
         |
      43 | '\u123456'
         | ^^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:44:3
         |
      44 | '\u1234567'
         |   ^
error: invalid character escape sequence
        --> <source>:44:3
         |
      44 | '\u1234567'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:44:1
         |
      44 | '\u1234567'
         | ^^^^^^^^^^^
error: expected '{' after '\\u'
        --> <source>:45:3
         |
      45 | '\u12345678'
         |   ^
error: invalid character escape sequence
        --> <source>:45:3
         |
      45 | '\u12345678'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:45:1
         |
      45 | '\u12345678'
         | ^^^^^^^^^^^^
error: raw string literal terminator too long
        --> <source>:56:7
         |
      56 | r#"abc"##
         |       ^^^
error: raw string literal terminator too long
        --> <source>:61:1
         |
      61 | "####
         | ^^^^^
error: raw string literal terminator too long
        --> <source>:62:3
         |
      62 | r""##
         |   ^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:1:1
         |
       1 | u8"test"
         | ^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:2:1
         |
       2 | u8r#"test"#
         | ^^^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:3:1
         |
       3 | u16"test"
         | ^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:4:1
         |
       4 | u16r##"test"##
         | ^^^^^^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:5:1
         |
       5 | u32"test"
         | ^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:6:1
         |
       6 | u32r###"test"###
         | ^^^^^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:7:1
         |
       7 | ''
         | ^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:8:1
         |
       8 | ' '
         | ^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:9:1
         |
       9 | '    '
         | ^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:10:1
         |
      10 | '          '
         | ^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:11:1
         |
      11 | 'ğŸ˜‚'
         | ^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:12:1
         |
      12 | 'â¤ï¸'
         | ^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:13:1
         |
      13 | 'ğŸŒ'
         | ^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:14:1
         |
      14 | '\u{1}'
         | ^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:15:1
         |
      15 | '\u{12}'
         | ^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:16:1
         |
      16 | '\u{123}'
         | ^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:17:1
         |
      17 | '\u{1234}'
         | ^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:18:1
         |
      18 | '\u{12345}'
         | ^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:19:1
         |
      19 | '\u{123456}'
         | ^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:20:1
         |
      20 | '\u{1234567}'
         | ^^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:21:1
         |
      21 | '\u{12345678}'
         | ^^^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:22:1
         |
      22 | '\u1}'
         | ^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:23:1
         |
      23 | '\u12}'
         | ^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:24:1
         |
      24 | '\u123}'
         | ^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:25:1
         |
      25 | '\u1234}'
         | ^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:26:1
         |
      26 | '\u12345}'
         | ^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:27:1
         |
      27 | '\u123456}'
         | ^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:28:1
         |
      28 | '\u1234567}'
         | ^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:29:1
         |
      29 | '\u12345678}'
         | ^^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:30:1
         |
      30 | '\u{1'
         | ^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:31:1
         |
      31 | '\u{12'
         | ^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:32:1
         |
      32 | '\u{123'
         | ^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:33:1
         |
      33 | '\u{1234'
         | ^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:34:1
         |
      34 | '\u{12345'
         | ^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:35:1
         |
      35 | '\u{123456'
         | ^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:36:1
         |
      36 | '\u{1234567'
         | ^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:37:1
         |
      37 | '\u{12345678'
         | ^^^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:38:1
         |
      38 | '\u1'
         | ^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:39:1
         |
      39 | '\u12'
         | ^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:40:1
         |
      40 | '\u123'
         | ^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:41:1
         |
      41 | '\u1234'
         | ^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:42:1
         |
      42 | '\u12345'
         | ^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:43:1
         |
      43 | '\u123456'
         | ^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:44:1
         |
      44 | '\u1234567'
         | ^^^^^^^^^^^
error: unexpected token '[token:character-literal]', expected member declaration
        --> <source>:45:1
         |
      45 | '\u12345678'
         | ^^^^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:46:1
         |
      46 | ""
         | ^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:47:1
         |
      47 | " "
         | ^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:48:1
         |
      48 | "\t"
         | ^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:49:1
         |
      49 | "\n\n"
         | ^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:50:1
         |
      50 | "\n"
         | ^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:51:1
         |
      51 | r""
         | ^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:52:1
         |
      52 | r#""#
         | ^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:53:1
         |
      53 | r##""##
         | ^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:54:1
         |
      54 | r##">>r#"test"#<<"##
         | ^^^^^^^^^^^^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:55:1
         |
      55 | r###"here's a long string"# "# "##; "###
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:56:1
         |
      56 | r#"abc"##
         | ^^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:57:1
         |
      57 | r#"def"#
         | ^^^^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:58:1
         |
      58 | | r##"ghi"#
      59 | | r#""##
         | |______^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:60:1
         |
      60 | | r#"
      61 | | "####
         | |_____^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:62:1
         |
      62 | r""##
         | ^^^^^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:63:1
         |
      63 | | r#" string literal goes on
      64 | | and on
      65 | | 
      66 | | 
      67 | | r"#
         | |___^
error: unexpected token '[token:identifier]', expected member declaration
        --> <source>:68:1
         |
      68 | r#~"#"~#
         | ^
error: unexpected token '#', expected member declaration
        --> <source>:68:2
         |
      68 | r#~"#"~#
         |  ^
error: unexpected token '~', expected member declaration
        --> <source>:68:3
         |
      68 | r#~"#"~#
         |   ^
error: unexpected token '[token:string-literal]', expected member declaration
        --> <source>:68:4
         |
      68 | r#~"#"~#
         |    ^^^
error: unexpected token '~', expected member declaration
        --> <source>:68:7
         |
      68 | r#~"#"~#
         |       ^
error: unexpected token '#', expected member declaration
        --> <source>:68:8
         |
      68 | r#~"#"~#
         |        ^
