compiler/weave_syntax/tests/data/Strings.source
u8"test"
u8r#"test"#
u16"test"
u16r##"test"##
u32"test"
u32r###"test"###
''
' '
'    '
'          '
'ğŸ˜‚'
'â¤ï¸'
'ğŸŒ'
'\u{1}'
'\u{12}'
'\u{123}'
'\u{1234}'
'\u{12345}'
'\u{123456}'
'\u{1234567}'
'\u{12345678}'
'\u1}'
'\u12}'
'\u123}'
'\u1234}'
'\u12345}'
'\u123456}'
'\u1234567}'
'\u12345678}'
'\u{1'
'\u{12'
'\u{123'
'\u{1234'
'\u{12345'
'\u{123456'
'\u{1234567'
'\u{12345678'
'\u1'
'\u12'
'\u123'
'\u1234'
'\u12345'
'\u123456'
'\u1234567'
'\u12345678'
""
" "
"\t"
"\n\n"
"\n"
r""
r#""#
r##""##
r##">>r#"test"#<<"##
r###"here's a long string"# "# "##; "###
r#"abc"##
r#"def"#
r##"ghi"#
r#""##
r#"
"####
r""##
r#" string literal goes on
and on


r"#
r#~"#"~#
